Updated index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>Welcome to Our App</h1>
         <p>Click the button below to download the APK file.</p>
-        <a href="http://23.21.2.75/AppBuild/jan30chottu.apk" class="download-btn">Download APK</a>
+        <a href="http://23.21.2.75/AppBuild/chottujan30.apk" class="download-btn">Download APK</a>
     </div>
 </body>
 </html>
